--- a/kernel/Makefile.boards
+++ b/kernel/Makefile.boards
@@ -1,3 +1,11 @@
+#
+# This file is part of the HAMMER build system.
+#
+# Copyright (C) 2012-2014 Aaro Koskinen <aaro.koskinen@iki.fi>
+#
+# Licensed under the GNU General Public License version 2 (GPLv2).
+#
+
 boards = $(shell ../scripts/list-boards.sh $(HW_ARCH))
 build_boards = $(patsubst %,board-%,$(boards))
 dl_boards = $(patsubst %, dl-%, $(boards))
