--- a/scripts/Makefile.subsystem
+++ b/scripts/Makefile.subsystem
@@ -15,6 +15,7 @@ ifndef BUILD_SUBSYSTEM
 endif
 
 dl_targets    = $(patsubst %, ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-dl, $(packages))
+list_targets  = $(patsubst %, ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-list, $(packages))
 fake_targets  = $(patsubst %, ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-files, $(packages))
 build_scripts = $(patsubst %, build-%.sh, $(packages))
 
@@ -24,8 +25,13 @@ depend: ../work/.dependencies.$(HW_ARCH)-$(BUILD_SUBSYSTEM)
 
 download: $(dl_targets)
 
+list: $(list_targets)
+
 $(dl_targets): ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-dl: build-%.sh
 	+@BUILD_SUBSYSTEM=$(BUILD_SUBSYSTEM) FAKE_TARGET=$@ HW_ARCH=$(HW_ARCH) MAKEFLAGS="$(MAKEFLAGS)" ../scripts/do_download.sh ./$<
+
+$(list_targets): ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-list: build-%.sh
+	+@BUILD_SUBSYSTEM=$(BUILD_SUBSYSTEM) FAKE_TARGET=$@ HW_ARCH=$(HW_ARCH) MAKEFLAGS="$(MAKEFLAGS)" ../scripts/do_list.sh ./$<
 
 $(fake_targets): ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-files: build-%.sh
 	+@BUILD_SUBSYSTEM=$(BUILD_SUBSYSTEM) FAKE_TARGET=$@ HW_ARCH=$(HW_ARCH) MAKEFLAGS="$(MAKEFLAGS)" ../scripts/do_build.sh ./$<
