--- a/scripts/Makefile.subsystem
+++ b/scripts/Makefile.subsystem
@@ -16,7 +16,7 @@ endif
 
 dl_targets    = $(patsubst %, ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-dl, $(packages))
 list_targets  = $(patsubst %, ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-list, $(packages))
-fake_targets  = $(patsubst %, ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-files, $(packages))
+fake_targets  = $(patsubst %, ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-build, $(packages))
 build_scripts = $(patsubst %, build-%.sh, $(packages))
 
 all: ../work/.dependencies.$(HW_ARCH)-$(BUILD_SUBSYSTEM) $(fake_targets)
@@ -33,7 +33,7 @@ $(dl_targets): ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-dl: build-%.sh
 $(list_targets): ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-list: build-%.sh
 	+@BUILD_SUBSYSTEM=$(BUILD_SUBSYSTEM) FAKE_TARGET=$@ HW_ARCH=$(HW_ARCH) MAKEFLAGS="$(MAKEFLAGS)" ../scripts/do_list.sh ./$<
 
-$(fake_targets): ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-files: build-%.sh
+$(fake_targets): ../work/$(HW_ARCH)/$(BUILD_SUBSYSTEM)/build/%-build: build-%.sh
 	+@BUILD_SUBSYSTEM=$(BUILD_SUBSYSTEM) FAKE_TARGET=$@ HW_ARCH=$(HW_ARCH) MAKEFLAGS="$(MAKEFLAGS)" ../scripts/do_build.sh ./$<
 
 ../work/.dependencies.$(HW_ARCH)-$(BUILD_SUBSYSTEM)::
